fixed spacing issue on skill bubbles

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -215,6 +215,7 @@ a.eduLink:hover {
     width: 275px;
 }
 .p-1 {
+    display: block;
     padding: 0;
     margin: 0 auto;
 }
